Revision history for Spreadsheet-ParseXLSX

{{$NEXT}}

0.29  2024-01-02

      - Merge pull request #1 from theevilapplepie/master: Fix for 'Argument "" isn't numeric in addition (+) at /usr/local/shar…
      - Merge pull request #2 from oharakouhei/master Incorrect cell values due to phonetic data doy#72
      - Merge pull request #3 from nickzoic/master: Fix die message in parse()
      - Merge pull request #4 from mazurin/master: Cannot open password protected SHA1 encrypted files. doy#68
      - Merge pull request #5 from danderman/master: use date format detection based on Spreadsheet::XLSX
      - Merge pull request #6 from gquipster/master: Add rudimentary support for hyperlinks in cells

0.28  2024-01-02

      - New maintainer
      - Fix possible memory bomb as reported in https://github.com/haile01/perl_spreadsheet_excel_rce_poc/blob/main/parse_xlsx_bomb.md
      - Updated Dist::Zilla configuration fixing deprecation warnings

0.27  2016-08-16
      - Fix issues parsing sheets whose cell elements do not have location
        attributes (dgiordano, #61)

0.26  2016-08-16
      - Add explicit dependency on perl 5.10 (we apparently broke 5.8 support
        at some point) (andk, #62)

0.25  2016-07-14
      - Fix encryption.t test on Windows (marks6i, #60)

0.24  2016-06-25
      - Support scalar refs as input (rshadow, #59)

0.23  2016-05-28
      - Stable release

0.22-TRIAL  2016-05-25
      - Fix some regressions around cell style application (Tux)
      - Speed up parsing of large spreadsheets

0.21-TRIAL  2016-05-23
      - Give a better error message when opening xls files (mchendriks, #52)
      - Fix parsing files with non-default XML namespace names
      - Handle files with no style information
      - Handle fills that don't specify a pattern type (vfilatov, #41)
      - Fix parsing of encrypted files on big-endian systems
        (mazurin, Tux, #50, #51)
      - Support reading files where the case is specified incorrectly (this is