@@ -9,3 +9,4 @@
 -sot
 -nbbb
 -nbbc
+-msc=1
