@@ -39,6 +39,7 @@ critic_config = .perlcriticrc
 [PodCoverageTests]
 [PodSyntaxTests]
 [MetaResources]
+[GitHub::Meta]
 [Git::Check]
 [Git::Commit]
 commit_msg = changelog
